<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="@string/app_title"
        android:textColor="@android:color/black"
        android:textSize="@dimen/app_title_size"
        android:textStyle="bold"
        android:typeface="serif" />

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/password_hint"
        android:inputType="numberPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnOne"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_one"
            android:src="@drawable/one" />

        <ImageView
            android:id="@+id/btnTwo"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_teo"
            android:src="@drawable/two" />

        <ImageView
            android:id="@+id/btnThree"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_three"
            android:src="@drawable/three" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnFour"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_four"
            android:src="@drawable/four" />

        <ImageView
            android:id="@+id/btnFive"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_five"
            android:src="@drawable/five" />

        <ImageView
            android:id="@+id/btnSix"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_six"
            android:src="@drawable/six" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnSeven"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_seven"
            android:src="@drawable/seven" />

        <ImageView
            android:id="@+id/btnEight"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_eight"
            android:src="@drawable/eight" />

        <ImageView
            android:id="@+id/btnNine"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_nine"
            android:src="@drawable/nine" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.25"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/btnClear"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_clear"
            android:src="@drawable/clear" />

        <ImageView
            android:id="@+id/btnZero"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_zero"
            android:src="@drawable/zero" />

        <ImageView
            android:id="@+id/btnEnter"
            style="@style/KeypadButton"
            android:contentDescription="@string/desc_btn_enter"
            android:src="@drawable/enter" />
    </LinearLayout>

</LinearLayout>

